gitops/manifests/nodejs-welcome/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-welcome
  namespace: welcome
  labels:
    app: nodejs-welcome 
    app2: nodejs-welcome
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nodejs-welcome
  template:
    metadata:
      labels:
        app: nodejs-welcome
    spec:
      containers:
        - name: test5
          image: quay.io/skaffoldtest/test6
          ports:
            - containerPort: 8080
              protocol: TCP
